# loop-engine

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
examples/: loop.yaml  raw-trace.example.yaml
examples/logs/claude/: v1.jsonl  v2.jsonl
src/loop_engine/: __init__.py  anthropic_client.py  cli.py  config.py  engine.py  experiments.py  identifiers.py  metrics.py  models.py  proposals.py  reconstruction.py  reporting.py  security.py  signals.py  storage.py
src/loop_engine/analyzers/: __init__.py  base.py  claude_cli.py  claude_sdk.py
src/loop_engine/providers/: __init__.py  adapters.py  base.py  registry.py
src/loop_engine/sources/: __init__.py  base.py  claude_jsonl.py  claude_normalization.py  litellm.py  raw_trace.py
tests/: test_alignment_verification.py  test_analyzer.py  test_claude_current_schema.py  test_claude_normalization.py  test_claude_normalization_reviewer.py  test_cli.py  test_config_paths.py  test_config_strict.py  test_end_to_end.py  test_engine_analyzer_integration.py  test_experiments.py  test_followup_regressions.py  test_metrics.py  test_raw_trace.py  test_semantic_regressions.py  test_source_namespace.py  test_sources.py  test_storage.py
tests/fixtures/: config.yaml
tests/fixtures/claude/: session-1.jsonl
tests/fixtures/claude_sessions/: 40e79c0c-b67f-436f-b0c1-650f9e6a5357.jsonl  synthetic-current-schema.jsonl
tests/fixtures/litellm/: request-1.json
tests/fixtures/relay_capture/20260714T172453.744313-fd84d2c9/: metadata.json  request.json  response_stream.jsonl  tool_results.json
