[project]
name = "enterprise-loop-engine"
version = "0.1.0"
description = "Local-first enterprise AI learning loop engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35",
  "duckdb>=1.1",
  "jinja2>=3.1",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "typer>=0.15",
]

[project.scripts]
loop = "loop_engine.cli:app"

[dependency-groups]
dev = [
  "boto3-stubs[s3]>=1.43.46",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_engine"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["loop_engine"]
